--- a/backend/package.json
+++ b/backend/package.json
@@ -1,32 +1,36 @@
 {
-  "name": "backend",
+  "name": "student-marketplace-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend API for Student Freelance Marketplace",
+  "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "test": "jest"
   },
-  "keywords": [],
+  "keywords": ["express", "typescript", "api"],
   "author": "",
-  "license": "ISC",
-  "description": "",
+  "license": "MIT",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "express-validator": "^7.2.1",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.0"
+    "bcryptjs": "^2.4.3",
+    "mongoose": "^8.0.3",
+    "express-validator": "^7.0.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/express-validator": "^2.20.33",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.6.2",
-    "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "@types/node": "^20.10.6",
+    "@types/multer": "^1.4.11",
+    "typescript": "^5.3.3",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2"
   }
 }
